# studio-tour-rag-assistant

./: .gitignore  CHATBOT_TEST_QUESTIONS.md  GITHUB_PUSH_GUIDE.md  GROQ_SETUP_VERIFIED.md  INSTALLATION_GUIDE.md  LICENSE  README.md  environment.yml  pyproject.toml  requirements-cpu.txt  requirements-dev.txt  requirements-minimal.txt  requirements.txt  requirements_voice.txt  setup_frontend.sh  start_with_groq.sh  start_with_ollama.sh  stop_voice_chat.sh
app/: streamlit_app.py
backend/: __init__.py  config.py  main.py  run.py
backend/services/: __init__.py  rag_service.py  transcription_service.py  tts_service.py
bm25_index/: bm25_index.pkl
chroma_db/1a1176d9-e94a-4ba7-9d7d-28025aaff94e/: index_metadata.pickle
config/: config.yaml
data/md files/: comprehensive_tour_faq.md  detailed_scripts_and_scenes.md  enhanced_interactive_experiences.md  expanded_facilities_technical.md  production_history_database.md
documentation/: 00_START_HERE.txt  ARCHITECTURE_OVERVIEW.txt  MERMAID_DIAGRAMS_GUIDE.txt  README.txt  architecture.mmd  architecture_enhanced.mmd
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AudioPlayer.tsx  ChatInterface.tsx  MessageBubble.tsx  SettingsPanel.tsx  StreamingText.tsx  VoiceRecorder.tsx  VoiceUploadModal.tsx
frontend/src/hooks/: useVoiceRecorder.ts  useWebSocket.ts
frontend/src/services/: api.ts
frontend/src/types/: index.ts
metrics/: PRESENTATION_SUMMARY.txt  README_METRICS.txt  SAMPLE_metrics_output.txt  __init__.py  metrics_report_20251017_161227.json  metrics_table_20251017_161227.txt  performance_tracker.py  quick_metrics.py  run_metrics.sh
scripts/: convert_md_to_pdf.py  ingest_data.py
src/: __init__.py
src/chat/: memory_manager.py
src/chunking/: __init__.py  chunker.py
src/embeddings/: embedding_service.py
src/llm/: groq_client.py  ollama_client.py
src/metadata/: metadata_extractor.py
src/query/: query_enhancer.py
src/retrieval/: __init__.py  bm25_index.py  retriever.py
src/vector_store/: __init__.py  chroma_client.py
tests/: test_performance_profiling.py
